fixed overflow style

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,8 +3,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  overflow-x: hidden;
-  overscroll-behavior-y: none;
+  overflow-x: clip;
 }
 
 .container {
@@ -14,7 +13,6 @@
   flex: 1;
   width: 100%;
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 @media (max-width: 768px) {
